tests/functional2/lang/scope/eval-fail-5.err.exp
error:
       … from call site
         at /pwd/in.nix:7:3:
            6| in
            7|   f {}
             |   ^
            8|

       … while calling 'f'
         at /pwd/in.nix:5:7:
            4|
            5|   f = {x ? y, y ? x}: x + y;
             |       ^
            6| in

       … while evaluating x
         at /pwd/in.nix:5:23:
            4|
            5|   f = {x ? y, y ? x}: x + y;
             |                       ^
            6| in

       … while evaluating y
         at /pwd/in.nix:5:12:
            4|
            5|   f = {x ? y, y ? x}: x + y;
             |            ^
            6| in

       error: infinite recursion encountered
       at /pwd/in.nix:5:12:
            4|
            5|   f = {x ? y, y ? x}: x + y;
             |            ^
            6| in
